# rdt-template

./: .gitignore  AI_POLICY.md  GRADING.md  PROCESS_TRACKING.md  PROTOCOL.md  README.md  TESTING.md  github_grader.py  project-template-config.json  pyproject.toml  run_tests.py
.ai-traces/: external-attestation.txt
.github/classroom/: autograding-simple.json
.github/workflows/: classroom.yml
rdt_support/: __init__.py  network_simulator.py
src/: gbn_host.py
template/: .gitkeep
tests/: rdt_test_utils.py  test_agent_adapter_claude.py  test_agent_adapter_codex.py  test_agent_adapter_vscode_chat.py  test_assignment_contract.py  test_capture_metadata.py  test_claude_ingest.py  test_claude_normalize.py  test_codex_ingest.py  test_example.py  test_fault_recovery.py  test_force_paths_unstage_after.py  test_lossless_delivery.py  test_packet_format.py  test_preflight.py  test_run_tests_feedback.py  test_vscode_chat_ingest.py  test_window_and_timeout.py
tests/_capture/: claude_ingest.py  codex_ingest.py  orchestrator.py  state.py  vscode_chat_ingest.py
tests/_capture/agent_adapters/: claude.py  claude_normalize.py  codex.py  registry.py  vscode_chat.py
tools/: INTEGRITY_HASHES.txt  preflight.py  validate_student_repo.py  verify_integrity.py
