[project]
name = "class-project-starter"
version = "0.1.0"
description = "A Python project starter template for introductory programming"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    # thread method is cross-platform; signal method fails on Windows.
    # Thread can't interrupt C-level blocks; the watchdog covers that.
    # INSTRUCTOR: calibrate --timeout per assignment before release.
    # 30s is a generic ceiling; tune to ~3-5x the reference solution's
    # slowest test. See CLAUDE.md "Calibrate timeout" section.
    "--timeout=30",
    "--timeout-method=thread",
]
markers = [
    "bundle: mark test as belonging to a specific grading bundle (usage: @pytest.mark.bundle(1))",
    "points: mark test with point value for scoring (usage: @pytest.mark.points(10))",
]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/test_*.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]